# starterm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  Makefile  PHASE_5_SUMMARY.md  PROJECT_STRUCTURE_REVIEW.md  README.md  ROADMAP.md  get-deps  rustfmt.toml  starterm.toml
.builds/: freebsd.yml  linux.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  upload_asset.sh
ai_assistant/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.py  test_key.py
ai_assistant/ai_assistant/: __init__.py
ai_assistant/ai_assistant.egg-info/: PKG-INFO  SOURCES.txt
benchmark/: .env  .gitignore  Cargo.toml  rustfmt.toml
benchmark/clients/: bench.sh  wol.sh
benchmark/config/: starterm.toml
benchmark/src/: github.rs  main.rs  model.rs  schema.rs  webserver.rs
ci/: README.md  check-rust-version.sh  create-flamegraph.sh
config/: Cargo.toml
config/derive/: Cargo.toml
config/derive/src/: lib.rs  serde_replace.rs
config/derive/src/config_deserialize/: de_enum.rs  de_struct.rs
config/derive/tests/: config.rs
config/src/: lib.rs
config_derive/: Cargo.toml
config_derive/tests/: config.rs
extra/: starterm.info
extra/completions/: _starterm  starterm.bash  starterm.fish
extra/linux/: Starterm.desktop  org.starterm.Starterm.appdata.xml
extra/man/: starterm-bindings.5.scd  starterm-msg.1.scd  starterm.1.scd  starterm.5.scd
extra/osx/Starterm.app/Contents/: Info.plist
starterm/: Cargo.toml  build.rs
starterm-macros/src/: lib.rs
starterm/src/: cli.rs  clipboard.rs  event.rs  ipc.rs  lib.rs  logging.rs  main.rs  message_bar.rs  panic.rs  window_context.rs  workflows.rs
starterm/src/ai/: agent.rs  context.rs  core.rs  learning.rs  mod.rs  multimodal.rs  reasoning.rs  suggestions.rs  ui_integration_example.rs  ui_integration_test.rs  vision.rs  voice.rs  workflow_gen.rs
starterm/src/ai/llm/: client.rs  mod.rs  openai.rs
starterm/src/analysis/: command_parser.rs  mod.rs  syntax_tree.rs
starterm/src/assets/: embedded.rs  mod.rs
starterm/src/completion/: cache.rs  engine.rs  mod.rs
starterm/src/completion/providers/: mod.rs
starterm/src/config/: ai.rs  bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
starterm/src/content/: markdown.rs  mod.rs
starterm/src/data/: indexing.rs  mod.rs  operations.rs  persistence.rs  sum_tree.rs
starterm/src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  window.rs
starterm/src/fs/: mod.rs  watcher.rs
starterm/src/input/: keyboard.rs  keysets.rs  mod.rs  modal.rs
starterm/src/lpc/: core.rs  mod.rs  translator.rs  validator.rs
starterm/src/lpc/adapters/: mod.rs
starterm/src/macos/: proc.rs
starterm/src/nlp/: adaptation.rs  context.rs  detector.rs  mod.rs  preference.rs
starterm/src/renderer/: mod.rs  rects.rs
starterm/src/renderer/text/: builtin_font.rs  gles2.rs  glsl3.rs  glyph_cache.rs  mod.rs
starterm/src/search/: fuzzy.rs  mod.rs
starterm/src/text/: buffer.rs  mod.rs  offset.rs  unicode.rs
starterm/src/ui/: block.rs  layout.rs  markdown_renderer.rs  mcq.rs  mod.rs  renderer.rs  state.rs  suggestions_view.rs  syntax_highlight.rs  workflows_sidebar.rs
starterm/src/validation/: mod.rs
starterm/src/workflows_new/: config.rs  mod.rs
starterm/windows/: starterm.rc
starterm/windows/wix/: license.rtf  starterm.wxs
starterm_bundled/: README.md
starterm_bundled/config/: starterm.yaml
starterm_bundled/scripts/: convert_themes.py  install.sh
starterm_bundled/workflows/brew/: backup_installed_dependencies.yaml  update_all_packages.yaml
starterm_bundled/workflows/git/: commit_with_message.yaml
term/: CHANGELOG.md  Cargo.toml
term/src/: event_loop.rs  lib.rs
term/src/grid/: resize.rs
term/src/term/: cell.rs  mod.rs  search.rs
term/src/tty/: mod.rs  unix.rs
term/src/tty/windows/: blocking.rs  conpty.rs
term/tests/: ref.rs
term/tests/ref/alt_reset/: starterm.recording
term/tests/ref/clear_underline/: starterm.recording
term/tests/ref/colored_underline/: starterm.recording
term/tests/ref/csi_rep/: starterm.recording
term/tests/ref/decaln_reset/: starterm.recording
term/tests/ref/deccolm_reset/: starterm.recording
term/tests/ref/delete_chars_reset/: starterm.recording
term/tests/ref/delete_lines/: starterm.recording
term/tests/ref/erase_chars_reset/: starterm.recording
term/tests/ref/fish_cc/: starterm.recording
term/tests/ref/hyperlinks/: grid.json  starterm.recording
term/tests/ref/indexed_256_colors/: starterm.recording
term/tests/ref/insert_blank_reset/: starterm.recording
term/tests/ref/issue_855/: starterm.recording
term/tests/ref/ll/: starterm.recording
term/tests/ref/newline_with_cursor_beyond_scroll_region/: starterm.recording
term/tests/ref/region_scroll_down/: starterm.recording
term/tests/ref/scroll_in_region_up_preserves_history/: starterm.recording
term/tests/ref/scroll_up_reset/: starterm.recording
term/tests/ref/tmux_git_log/: starterm.recording
termbench/: Cargo.toml  README.md
termbench/benchmarks/medium_cells/: vim_session
termbench/benchmarks/sync_medium_cells/: vim_session
theme/themes/: Mariana.toml  carbonfox.toml  catppuccin.toml  dawnfox.toml  dayfox.toml  duskfox.toml  falcon.toml  flexoki.toml  github_dark.toml  github_dark_default.toml  github_dark_dimmed.toml  github_dark_high_contrast.toml  github_dark_tritanopia.toml  github_light.toml  github_light_colorblind.toml  github_light_high_contrast.toml  github_light_tritanopia.toml  hardhacker.toml  inferno.toml  marine_dark.toml  midnight_haze.toml  nightfox.toml  nord_light.toml  nordfox.toml  palenight.toml  rigel.toml  seoul256-light.toml  sonokai.toml  starterm_0_12.toml  terafox.toml  tokyo_night.toml  tokyo_night_storm.toml
workflows/: Cargo.toml  FORMAT.md  README.md
workflows/examples/: Cargo.toml
workflows/examples/src/: main.rs
workflows/workflow-types/: Cargo.toml
workflows/workflows/: Cargo.toml  build.rs
(+346 files in other folders)
