[package]
name = "starterm_config"
version = "0.1.1-dev"
authors = ["Md Sulaiman <admin@khulnasoft.com>"]
license = "MIT OR Apache-2.0"
description = "Starterm configuration abstractions"
homepage = "https://starterm.khulnasoft.com"
repository = "https://github.com/khulnasoft-lab/starterm"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
log = { version = "0.4.17", features = ["serde"] }
serde = "1.0.163"
toml = "0.8.2"

[dev-dependencies]
starterm_config_derive = { version = "0.1.1-dev", path = "./derive" }
serde = { version = "1.0.163", features = ["derive"] }
